2013-09-13  Dario Rodriguez <dario@artica.es>

	* include/js/integria_incident_search.js,
	include/functions_incidents.php,
	operation/incidents/incident_search_logic.php,
	operation/incidents/incident_detail.php,
	operation/incidents/incident_dashboard_detail.php: Added new button
	to recover search on incident_detail and incident_dashboard_detail.

2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/grupos/configurar_grupo.php,
	  godmode/setup/setup_pandora.php: Added validation to
	  avoid nonexistent users.
	
	* include/ajax/remote_validations.php: Added code to check
	if an user exist and if the actual user can see it.
	
	* include/js/jquery.validation.functions.js: Added the
	function "validate_user" to validate if an user exist
	and if the actual user can see it.

2013-09-12  Dario Rodriguez <dario@artica.es>

	* operation/incidents/incident_workunits.php: Fixed a problem
	with incident stats with adding a workunit that changes the user
	assigned.

2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/grupos/configurar_grupo.php,
	  godmode/setup/setup_pandora.php: Added validation to
	  avoid nonexistent users.
	
	* include/ajax/remote_validations.php: Added code to check
	if an user exist and if the actual user can see it.
	
	* include/js/jquery.validation.functions.js: Added the
	function "validate_user" to validate if an user exist
	and if the actual user can see it.
	
2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* mobile/operation/incident.php: Visual changes.
	
2013-09-12  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* include/styles/integria.css: Recovered an old rule.
	
	* include/styles/wiki.css,
	  operation/wiki/wiki.php: Added some default styles
	  for the ul and ol elements.
	
2013-09-12  Vanessa Gil <vanessa.gil@artica.es>

	* include/functions_crm.php
	  operation/companies/company_detail.php: Fixed bug listing
	companies in CRM.
